Closed Bug 375363 Opened 19 years ago Closed 19 years ago

inherit and -moz-initial not stored/serialized correctly for 4 properties

Categories

(Core :: CSS Parsing and Computation, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9alpha4

People

(Reporter: dbaron, Assigned: dbaron)

References

(Blocks 1 open bug)

Details

(Whiteboard: [patch])

Attachments

(1 file)

'inherit' and '-moz-initial' are either not stored correctly or not serialized correctly for 4 properties: -moz-force-broken-image-icon, quotes, -moz-box-ordinal-group, and background-position. This shows up in two mochitests I'm going to check in to layout/style/tests/ shortly, test_inherit_storage.html and test_initial_storage.html.
Assignee: nobody → dbaron
Status: NEW → ASSIGNED
Attachment #259661 - Flags: superreview?(bzbarsky)
Attachment #259661 - Flags: review?(bzbarsky)
Comment on attachment 259661 [details] [diff] [review] patch for 3 of the 4 Looks reasonable!
Attachment #259661 - Flags: superreview?(bzbarsky)
Attachment #259661 - Flags: superreview+
Attachment #259661 - Flags: review?(bzbarsky)
Attachment #259661 - Flags: review+
Checked in above patch; 1 property left.
background-position fixed bug bug 258080.
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9alpha4
Flags: in-testsuite?
Flags: in-testsuite? → in-testsuite+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: