Fix handling of initial and -moz-inherit for -moz-broken-image-icon, quotes, and -moz-box-ordinal-group.  b=375363  r+sr=bzbarsky